# useless-matrix-library

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  test.cpp
src/matrix/: matrix.hpp  matrix.inl  matrix_row.cpp  matrix_row.hpp  matrix_row.inl  solutions.cpp  solutions.hpp
src/matrix/detail/: matrix.hpp  matrix_row.hpp
